--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  background-image: url(./pictures/brick-wall-bricks-stone-207142.jpg);
+  background-repeat: repeat;
+  background-size: cover;
 }
