--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
   background-image: url(./pictures/brick-wall-bricks-stone-207142.jpg);
   background-repeat: repeat;
+  background-size: cover;
 }
